[tool.poetry]
name = "voicehunte"
version = "0.1.0"
description = "VoiceHunte service"
authors = ["VoiceHunte Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.110.0"
uvicorn = { version = "^0.27.1", extras = ["standard"] }
pydantic = "^2.6.1"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
requests = "^2.31.0"
sentence-transformers = "^2.6.1"
psycopg = { version = "^3.1.18", extras = ["binary"] }
twilio = "^9.0.0"
python-multipart = "^0.0.6"
tenacity = "^8.2.3"
slowapi = "^0.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q"
